--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
       <section class="section-banner">
         <div class="container">
         <ul class="banner-list">
-          <li>
+          <li class="banner-item">
             <a href=""><img src="" alt="" /></a>
               <h3 class="banner-item-title">Watches</h3>        
             <p>Starting at <span>$99.00</span></p>
           </li>
-          <li>
+          <li class="banner-item">
             <a href=""><img src="" alt="" /></a>
               <h3 class="banner-item-title">Plo Bag</h3>
             <p>Starting at <span>$79.00</span></p>
           </li>
-          <li>
+          <li class="banner-item">
             <a href=""><img src="" alt="" /></a>        
               <h3 class="banner-item-title">Sunglass</h3>
             <p>Starting at <span>$29.00</span></p>
