--- a/home.html
+++ b/home.html
@@ -344,9 +344,9 @@
                   <span>lifestyle</span>
                   <span>men</span>
                 </div>
-                <div class="blog-img">
+                <a class="blog-img">
                   <img src="./images/blog-1.jpg" alt="blog-1" />
-                </div>
+                </a>
                 <h3 class="blog-desc">
                   A guide to latest trends
                   <br />
@@ -359,9 +359,9 @@
                 <div class="blog-tag">
                   <span>lifestyle</span>
                 </div>
-                <div class="blog-img">
+                <a class="blog-img">
                   <img src="./images/blog-2.jpg" alt="blog-2" />
-                </div>
+                </a>
                 <h3 class="blog-desc">
                   Five ways to lead happy
                   <br />
@@ -374,9 +374,9 @@
                 <div class="blog-tag">
                   <span>lifestyle</span>
                 </div>
-                <div class="blog-img">
+                <a class="blog-img">
                   <img src="./images/blog-3.jpg" alt="blog-3" />
-                </div>
+                </a>
                 <h3 class="blog-desc">
                   Tips on having a happy
                   <br />
