--- a/home.html
+++ b/home.html
@@ -339,12 +339,11 @@
           </div>
           <ul class="blog-list">
             <li class="blog-item">
-              <a href="">
                 <div class="blog-tag">
                   <span>lifestyle</span>
                   <span>men</span>
                 </div>
-                <a class="blog-img">
+                <a href="" class="blog-img">
                   <img src="./images/blog-1.jpg" alt="blog-1" />
                 </a>
                 <h3 class="blog-desc">
@@ -352,14 +351,12 @@
                   <br />
                   <i>By Admin</i>
                 </h3>
-              </a>
             </li>
             <li class="blog-item">
-              <a href="">
                 <div class="blog-tag">
                   <span>lifestyle</span>
                 </div>
-                <a class="blog-img">
+                <a href="" class="blog-img">
                   <img src="./images/blog-2.jpg" alt="blog-2" />
                 </a>
                 <h3 class="blog-desc">
@@ -367,14 +364,12 @@
                   <br />
                   <i>By Admin</i>
                 </h3>
-              </a>
             </li>
             <li class="blog-item">
-              <a href="">
                 <div class="blog-tag">
                   <span>lifestyle</span>
                 </div>
-                <a class="blog-img">
+                <a href="" class="blog-img">
                   <img src="./images/blog-3.jpg" alt="blog-3" />
                 </a>
                 <h3 class="blog-desc">
@@ -382,7 +377,6 @@
                   <br />
                   <i>By Admin</i>
                 </h3>
-              </a>
             </li>
           </ul>
         </div>
