--- a/project_scss/home.html
+++ b/project_scss/home.html
@@ -9,7 +9,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="./scss/styles.css" />
-    <title>Layout with flex-box</title>
+    <title>Layout with scss</title>
   </head>
   <body>
     <header class="page-header">
